try increasing permgen space and forks